# openjpegjs

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build-native.sh  build.sh  package-lock.json  performance.csv
.devcontainer/: Dockerfile
scripts/: docker-build.sh  docker-sh.sh  native-build.sh  performance.sh  wasm-build.sh
src/: BufferStream.hpp  CMakeLists.txt  FrameInfo.hpp  J2KDecoder.hpp  J2KEncoder.hpp  Point.hpp  Size.hpp  jslib.cpp
test/browser/: index.html
test/cpp/: CMakeLists.txt  main.cpp
test/fixtures/j2k/: CT1-0decomp.j2k  CT1.j2k  CT2.j2k  M2.j2k  MR1.j2k  MR3.j2k  MR4.j2k  NM1.j2k  RG2.j2k  RG3.j2k  SC1.j2k  VL1.j2k  VL2.j2k  VL3.j2k  VL6.j2k  XA1.j2k  image.j2k
test/node/: codec-helper.js  index.js
